--- a/src/common/style/base.scss
+++ b/src/common/style/base.scss
@@ -1,6 +1,12 @@
 /**
  * Created by Moudi on 2017/3/5.
  */
+body, html {
+  line-height: 1;
+  font-weight: 200;
+  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
 
 //1px border
 @media (-webkit-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5) {
