--- a/src/common/style/mixin.scss
+++ b/src/common/style/mixin.scss
@@ -15,3 +15,10 @@
     border-top: 1px solid $color;
   }
 }
+
+@mixin bg-image($url) {
+  background-image: url('img/' + $url + '@2x.png');
+  @media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
+    background-image: url('img/' + $url + '@3x.png');
+  }
+}
